# cmwp_bot

./: README.md  docker-compose.yaml  dockerfile  pyproject.toml
app/admin/admin/: settings.py
app/admin/core/: admin.py  apps.py  models.py
app/cmwp_bot/: dispatcher.py  main.py  settings.py
app/cmwp_bot/db/: models.py  repo.py  session.py
app/cmwp_bot/handlers/: back.py  contacts.py  how_helpful.py  ideal.py  office_price.py  staff_wants.py  start.py
app/cmwp_bot/presentation/: keyboards.py  registration.py
app/cmwp_bot/services/: action_service.py  broadcast.py  caption_service.py  email_service.py  survey_service.py  user_service.py
migrations/: env.py
