[project]
name = "cmwp-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Elisey",email = "eliseyblajen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "aiogram (>=3.20.0.post0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "cmwp_bot", from = "app"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
